Added api auth token and updated swagger to allow auth. Using JWT for auth
