# src/routes/auth.route.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const authController = require('../controllers/auth.controller');
+
+const authRouter = express.Router();
+
+authRouter.post("/get-api-token", authController.getApiToken);
+
+module.exports = authRouter;
+
