# src/routes/uploads.route.js
@@ -1,7 +1,10 @@
 const express = require('express');
-const uploadsController = require('../controllers/uploads.controller.js');
+const uploadsController = require('../controllers/uploads.controller');
+const authMiddleware = require('../middleware/auth.middleware');
 
 const uploadsRouter = express.Router();
+
+uploadsRouter.use(authMiddleware);
 
 uploadsRouter.post('/video', uploadsController.videoUpload);
 
